--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "By-DhaniOfficiall",
-  "version": "2.0.0",
-  "description": "Created By DhaniOfficiall.",
-  "main": "node index.js",
+  "name": "api-dhanl",
+  "version": "1.0.0",
+  "description": "REST API by DhaniOfficiall - Deployed on Vercel",
+  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "node index.js",
+    "build": "echo 'No build step required for Node.js'"
+  },
+  "engines": {
+    "node": ">=18.x"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BOTZ-DHANI/api-dhani-2023.git"
+    "url": "git+https://github.com/Anynr/api-dhanl.git"
   },
   "keywords": [
     "restapi",
-    "botwhatsapp"
+    "vercel",
+    "nodejs",
+    "express"
   ],
   "author": "DhaniOfficiall",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/BOTZ-DHANI/api-dhani-2023/issues"
+    "url": "https://github.com/Anynr/api-dhanl/issues"
   },
-  "homepage": "https://github.com/BOTZ-DHANI/api-dhani-2023#readme",
+  "homepage": "https://github.com/Anynr/api-dhanl#readme",
   "dependencies": {
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.11",
@@ -34,8 +41,6 @@
     "jsdom": "^19.0.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
-    "nodemon": "^1.3.3",
-    "path": "^0.12.7",
     "qs": "^6.10.3",
     "secure": "^0.0.1",
     "ssl-express-www": "^3.0.8",
